# r-shell

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  native_macOS_port_sprint_plan.md  package.json  rust_conetxt_engineering_tools.md  rust_context_engineering_tools.md
.cache/cargo-home/: .crates.toml  .crates2.json  .global-cache
.claude/: settings.json
.kiro/skills/: release.md
r-shell-core/: Cargo.toml
r-shell-core/src/: connection_manager.rs  event_bus.rs  ftp_client.rs  keychain.rs  lib.rs  sftp_client.rs
r-shell-core/src/ssh/: host_keys.rs  mod.rs  tests.rs
r-shell-macos/: Cargo.toml  Package.swift  SwiftTerm_Audit.md  build.rs  project.yml
r-shell-macos/RShellApp/: AppDelegate.swift  BridgeManager.swift  ChartView.swift  ConnectionEditView.swift  ConnectionStoreManager.swift  ContentView.swift  CrashReporter.swift  DualPaneFileBrowserView.swift  FileBrowserPanel.swift  FileBrowserView.swift  FileEditView.swift  FileOperationsManager.swift  FilePermissionsEditor.swift  HostKeyPrompt.swift  ImportManager.swift  Info.plist  KeychainManager.swift  LayoutManager.swift  LocalFileBrowserView.swift  LogPanel.swift  MonitorPanel.swift  MonitorPollingManager.swift  MonitorTabView.swift  PTYBufferManager.swift  PTYProfiler.swift  PanelViews.swift  ProcessListView.swift  ProcessPanel.swift  RShell.entitlements  RShellApp.swift  RShellEventCallback.swift  SettingsView.swift  SidebarView.swift  SystemMonitorView.swift  TabBarView.swift  TerminalSearchBar.swift  TerminalSessionManager.swift  TerminalTabsStore.swift  TerminalThemes.swift  TerminalView.swift  (+10 more)
r-shell-macos/Sources/RShellMacOS/: ConnectionStore.swift  FeatureFlags.swift  FileModels.swift  LayoutModels.swift  MonitoringModels.swift  RShellMacOS.swift
r-shell-macos/Tests/RShellAppTests/: RShellAppFFITests.swift
r-shell-macos/Tests/RShellMacOSTests/: RShellBetaSmokeTests.swift  RShellMacOSBridgeTests.swift
r-shell-macos/bindings/: module.modulemap  r_shell_macos.swift  r_shell_macosFFI.h
r-shell-macos/src/: bridge.rs  ffi.rs  lib.rs  monitor.rs
r-shell-tauri/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
r-shell-tauri/docs/: GPU_MONITOR_SPEC.md  VERSION_BUMP.md
r-shell-tauri/scripts/: README.md  bump-version.mjs  bump-version.sh
r-shell-tauri/scripts/qa/: check_architecture.py  check_file_lengths.py  file_length_baseline.json  mutants_ratchet.sh  pre_write_guard.sh  run_local_qa.sh
r-shell-tauri/src/: App.css  App.tsx  main.tsx
r-shell-tauri/src-tauri/: Cargo.toml  tauri.conf.json
r-shell-tauri/src-tauri/icons/: icon.icns
r-shell-tauri/src-tauri/src/: lib.rs  websocket_server.rs
r-shell-tauri/src-tauri/src/commands/: desktop.rs  ftp.rs  gpu.rs  keychain.rs  local_fs.rs  logs.rs  mod.rs  network.rs  processes.rs  remote_fs.rs  sftp.rs  ssh.rs  ssh_fs.rs  system.rs  websocket.rs
r-shell-tauri/src/__tests__/: connection-dialog.test.tsx  connection-manager.test.tsx  connection-storage-sftp-ftp.property.test.ts  connection.test.ts  drop-zone-overlay.test.tsx  file-browser-logic.property.test.ts  file-entry-types.test.ts  grid-renderer.test.tsx  keyboard-shortcuts.test.ts  keychain.test.ts  multi-connection-same-info.property.test.ts  multi-connection-same-info.test.ts  protocol-config.property.test.ts  session-persistence-sftp-ftp.test.ts  ssh-file-browser-transfer.property.test.ts  sync-types.test.ts  tab-integration-sftp-ftp.test.ts  terminal-group-context.property.test.ts  terminal-group-reducer.property.test.ts  terminal-group-reducer.test.ts  terminal-group-serializer.property.test.ts  terminal-group-serializer.test.ts  transfer-queue-reducer.test.ts  transfer-queue.property.test.ts
r-shell-tauri/src/components/: code-editor.tsx  connection-details.tsx  connection-dialog.tsx  connection-manager.tsx  connection-tabs.tsx  toolbar.tsx  (+21 more)
r-shell-tauri/tests/: e2e.spec.ts  ftp-e2e.spec.ts
scripts/qa/: architecture_rules.toml  post_edit.sh  run_local_qa.sh
src/: App.tsx
src-tauri/: Cargo.toml  justfile  tauri.conf.json
src-tauri/src/: commands.rs  connection_manager.rs  desktop_protocol.rs  ftp_client.rs  keychain.rs  lib.rs  main.rs  menu.rs  sftp_client.rs  websocket_server.rs
src-tauri/src/commands/: desktop.rs  ftp.rs  gpu.rs  keychain.rs  local_fs.rs  logs.rs  mod.rs  network.rs  processes.rs  remote_fs.rs  sftp.rs  ssh.rs  ssh_fs.rs  system.rs
src-tauri/src/ssh/: host_keys.rs  mod.rs  shell.rs  tests.rs
src/components/: connection-dialog.tsx  file-browser-view.tsx  keychain-credentials-card.tsx  pty-terminal.tsx  settings-modal.tsx
src/lib/: keychain.ts  protocol-config.ts
(+56 files in other folders)
