[package]
name = "k-shell"
version = "1.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "k_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
russh = { version = "0.43", features = ["openssl", "vendored-openssl"] }
russh-keys = { version = "0.43", features = ["vendored-openssl"] }
russh-sftp = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures = "0.3"
tokio-util = "0.7"
suppaftp = { version = "6", features = ["async-native-tls"] }
async-std = "1"
dirs = "5"
open = "5"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

# Performance optimization profiles
[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip debug symbols
panic = "abort"        # Smaller binary size

[profile.dev]
opt-level = 0          # No optimization for faster compile
debug = true           # Include debug info

# Optional: Super optimized release
[profile.release-optimized]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = "fat"            # Aggressive LTO
codegen-units = 1
