[package]
name = "k-shell"
version = "1.3.2"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "k_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
r-shell-core = { path = "../../r-shell-core" }
tauri = { version = "2.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures = "0.3"
rand = "0.8"
open = "5"
dirs = "5"

[dev-dependencies]
tempfile = "3"
